[tool.poetry]
name = "nchu-nlp-api"
version = "0.1.0"
description = ""
authors = ["Tomy Hsieh <tomy0000000@gmail.com>", "Philip Huang <p208p2002@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
fastapi = "^0.68.1"
transformers = "^4.11.2"
torch = ">=1.7.0,<=1.8.1"
loguru = "^0.5.3"
uvicorn = {extras = ["standard"], version = "^0.15.0"}
aiofiles = "^0.7.0"
nlg-eval = {git = "https://github.com/Maluuba/nlg-eval.git"}
python-docx = "^0.8.11"
geneticalgorithm = "^1.0.2"
stanza = "^1.3.0"
matplotlib = "^3.4.3"

[tool.poetry.dev-dependencies]
black = "^21.9b0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
