[tool.poetry]
name = "nchu-nlp-api"
version = "0.1.0"
description = ""
authors = ["Tomy Hsieh <pypi@tomy.me>", "Philip Huang <p208p2002@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
transformers = "^4.11.2"
torch = "1.9.0"
fastapi = "^0.68.1"
uvicorn = {extras = ["standard"], version = "^0.15.0"}
loguru = "^0.5.3"
aiofiles = "^0.7.0"
nlg-eval = {git = "https://github.com/Maluuba/nlg-eval.git"}
python-docx = "^0.8.11"
geneticalgorithm = "^1.0.2"
stanza = "^1.3.0"
matplotlib = "^3.4.3"
nlp2 = "^1.8.38"

[tool.poetry.dev-dependencies]
black = "^21.9b0"
ipython = "^7.31.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
